[tool.poetry]
name = "tyled"
version = "0.2.0"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
click = "^8.1.3"
pillow = ">=9.3,<11.0"
toml = "^0.10.2"
jinja2 = "^3.1.2"
rectpack = "^0.2.2"

[tool.poetry.scripts]
tyled = "tyled.command:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
